add project configs

--- a/notebooks/preprocessing_benchmark.ipynb
+++ b/notebooks/preprocessing_benchmark.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "5bfb59d2",
    "metadata": {},
    "outputs": [],
@@ -90,6 +90,10 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.dates as mdates\n",
+    "\n",
+    "#setup system path for modular import\n",
+    "import sys, os\n",
+    "project_root = os.path.abspath(os.path.join(os.getcwd(), \"..\"))\n",
     "\n",
     "#Processing and tests\n",
     "from scipy import stats\n",
@@ -132,6 +136,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c61a0488",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "bbde33cb",
    "metadata": {},
@@ -141,18 +153,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "37271820",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(100, 3)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def get_sp100_constituents():\n",
     "    url = \"https://en.wikipedia.org/wiki/S%26P_100\"\n",
@@ -171,7 +175,8 @@
     "\n",
     "sp100 = get_sp100_constituents()\n",
     "sp100 = sp100[sp100['Symbol'] != 'PLTR']\n",
-    "print(sp100.shape)"
+    "\n",
+    "sp100.to_csv('D:/Study/Education/Projects/OmniTS/data/stock_information.csv')"
    ]
   },
   {
@@ -3663,18 +3668,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "f9a74c21",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df_NFLX.to_csv('D:/Study/Education/Projects/OmniTS/data/temp.csv', index = False)\n",
-    "\n",
-    "df_NFLX = pd.read_csv('D:/Study/Education/Projects/OmniTS/data/temp.csv')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "16f7c8e0",
    "metadata": {},
@@ -3936,11 +3929,49 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "8a879fd1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        Open       High        Low      Close    Volume\n",
+      "0  20.929238  21.216928  20.437773  21.049109  13767900\n",
+      "1  20.977191  20.977191  20.473739  20.875303  16739300\n",
+      "2  20.749435  20.911260  20.527677  20.611586  21372100\n",
+      "3  20.467741  21.246893  20.467741  20.653538  17897100\n",
+      "4  20.551652  20.761423  19.994258  20.204029  17863300\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.utils.extract_stock_index import extract_index\n",
+    "\n",
+    "df_NFLX = extract_index(\"ABBV\")\n",
+    "print(df_NFLX.head())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "fb9844be",
    "metadata": {},
    "source": [
     "However, denoising is only 1 additional application of HHT in terms of spectral analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "63f04e41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df_NFLX.to_csv('D:/Study/Education/Projects/OmniTS/data/temp.csv', index = False)\n",
+    "\n",
+    "df_NFLX = pd.read_csv('D:/Study/Education/Projects/OmniTS/data/temp.csv')"
    ]
   },
   {
