Add index extractor

--- a/notebooks/preprocessing_benchmark.ipynb
+++ b/notebooks/preprocessing_benchmark.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c1b79fae",
+   "id": "9faa0a91",
    "metadata": {},
    "source": [
     "**Table of contents**<a id='toc0_'></a>    \n",
@@ -62,6 +62,8 @@
     "        - [Pre-requisites: Hilbert Transform](#toc2_2_4_5_7_)    \n",
     "        - [Pre-requisites: Cauchy Principle Value](#toc2_2_4_5_8_)    \n",
     "        - [Hilbert Spectrum Analysis (HSA)](#toc2_2_4_5_9_)    \n",
+    "      - [Sample comprehensive implementation and comparison between methods](#toc2_2_4_6_)    \n",
+    "        - [Additional: How to evaluate the smoothing technique](#toc2_2_4_6_1_)    \n",
     "    - [Dealing with Nulls and Missing data](#toc2_2_5_)    \n",
     "      - [Forward/ Back fills](#toc2_2_5_1_)    \n",
     "      - [Winsorization](#toc2_2_5_2_)    \n",
@@ -80,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5bfb59d2",
    "metadata": {},
    "outputs": [],
@@ -94,6 +96,8 @@
     "#setup system path for modular import\n",
     "import sys, os\n",
     "project_root = os.path.abspath(os.path.join(os.getcwd(), \"..\"))\n",
+    "if project_root not in sys.path:\n",
+    "    sys.path.append(project_root)\n",
     "\n",
     "#Processing and tests\n",
     "from scipy import stats\n",
@@ -3921,32 +3925,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "8a879fd1",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        Open       High        Low      Close    Volume\n",
-      "0  20.929238  21.216928  20.437773  21.049109  13767900\n",
-      "1  20.977191  20.977191  20.473739  20.875303  16739300\n",
-      "2  20.749435  20.911260  20.527677  20.611586  21372100\n",
-      "3  20.467741  21.246893  20.467741  20.653538  17897100\n",
-      "4  20.551652  20.761423  19.994258  20.204029  17863300\n"
-     ]
-    }
-   ],
-   "source": [
-    "from src.utils.extract_stock_index import extract_index\n",
-    "\n",
-    "df_NFLX = extract_index(\"ABBV\")\n",
-    "print(df_NFLX.head())"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "fb9844be",
    "metadata": {},
@@ -3956,7 +3934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "id": "63f04e41",
    "metadata": {},
    "outputs": [],
@@ -4250,6 +4228,240 @@
     "Each dot represents an amplitude contribution at a certain time + frequency\n",
     "\n",
     "Regions with continuos colored ridges -> strong oscillatory modes in the signal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1712e9f6",
+   "metadata": {},
+   "source": [
+    "#### <a id='toc2_2_4_6_'></a>[Sample comprehensive implementation and comparison between methods](#toc0_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a879fd1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Study\\Setup\\anaconda\\config\\Lib\\site-packages\\statsmodels\\tsa\\filters\\hp_filter.py:100: SparseEfficiencyWarning: spsolve requires A be CSC or CSR matrix format\n",
+      "  trend = spsolve(I+lamb*K.T.dot(K), x, use_umfpack=use_umfpack)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>MA_12</th>\n",
+       "      <th>Gaussian_2</th>\n",
+       "      <th>Seasonal_Dec</th>\n",
+       "      <th>STL</th>\n",
+       "      <th>HP</th>\n",
+       "      <th>Savgol</th>\n",
+       "      <th>Fourier</th>\n",
+       "      <th>Wavelet</th>\n",
+       "      <th>EMD</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>20.929238</td>\n",
+       "      <td>21.216928</td>\n",
+       "      <td>20.437773</td>\n",
+       "      <td>21.049109</td>\n",
+       "      <td>13767900</td>\n",
+       "      <td>21.049109</td>\n",
+       "      <td>20.839604</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>19.951731</td>\n",
+       "      <td>20.435674</td>\n",
+       "      <td>21.120704</td>\n",
+       "      <td>71.058483</td>\n",
+       "      <td>20.843707</td>\n",
+       "      <td>21.136615</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>20.977191</td>\n",
+       "      <td>20.977191</td>\n",
+       "      <td>20.473739</td>\n",
+       "      <td>20.875303</td>\n",
+       "      <td>16739300</td>\n",
+       "      <td>21.022369</td>\n",
+       "      <td>20.779120</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>20.107382</td>\n",
+       "      <td>20.542270</td>\n",
+       "      <td>20.829793</td>\n",
+       "      <td>47.646140</td>\n",
+       "      <td>20.897001</td>\n",
+       "      <td>20.820368</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20.749435</td>\n",
+       "      <td>20.911260</td>\n",
+       "      <td>20.527677</td>\n",
+       "      <td>20.611586</td>\n",
+       "      <td>21372100</td>\n",
+       "      <td>20.959172</td>\n",
+       "      <td>20.678687</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>20.264538</td>\n",
+       "      <td>20.649250</td>\n",
+       "      <td>20.606899</td>\n",
+       "      <td>28.527737</td>\n",
+       "      <td>20.959265</td>\n",
+       "      <td>20.553166</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>20.467741</td>\n",
+       "      <td>21.246893</td>\n",
+       "      <td>20.467741</td>\n",
+       "      <td>20.653538</td>\n",
+       "      <td>17897100</td>\n",
+       "      <td>20.912151</td>\n",
+       "      <td>20.571570</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>20.423100</td>\n",
+       "      <td>20.757205</td>\n",
+       "      <td>20.452023</td>\n",
+       "      <td>15.624170</td>\n",
+       "      <td>21.031141</td>\n",
+       "      <td>20.360194</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>20.551652</td>\n",
+       "      <td>20.761423</td>\n",
+       "      <td>19.994258</td>\n",
+       "      <td>20.204029</td>\n",
+       "      <td>17863300</td>\n",
+       "      <td>20.803209</td>\n",
+       "      <td>20.493536</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>20.582907</td>\n",
+       "      <td>20.866702</td>\n",
+       "      <td>20.365163</td>\n",
+       "      <td>9.500707</td>\n",
+       "      <td>21.107200</td>\n",
+       "      <td>20.264088</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Open       High        Low      Close    Volume      MA_12  \\\n",
+       "0  20.929238  21.216928  20.437773  21.049109  13767900  21.049109   \n",
+       "1  20.977191  20.977191  20.473739  20.875303  16739300  21.022369   \n",
+       "2  20.749435  20.911260  20.527677  20.611586  21372100  20.959172   \n",
+       "3  20.467741  21.246893  20.467741  20.653538  17897100  20.912151   \n",
+       "4  20.551652  20.761423  19.994258  20.204029  17863300  20.803209   \n",
+       "\n",
+       "   Gaussian_2  Seasonal_Dec        STL         HP     Savgol    Fourier  \\\n",
+       "0   20.839604           NaN  19.951731  20.435674  21.120704  71.058483   \n",
+       "1   20.779120           NaN  20.107382  20.542270  20.829793  47.646140   \n",
+       "2   20.678687           NaN  20.264538  20.649250  20.606899  28.527737   \n",
+       "3   20.571570           NaN  20.423100  20.757205  20.452023  15.624170   \n",
+       "4   20.493536           NaN  20.582907  20.866702  20.365163   9.500707   \n",
+       "\n",
+       "     Wavelet        EMD  \n",
+       "0  20.843707  21.136615  \n",
+       "1  20.897001  20.820368  \n",
+       "2  20.959265  20.553166  \n",
+       "3  21.031141  20.360194  \n",
+       "4  21.107200  20.264088  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from src.utils.extract_stock_index import extract_index\n",
+    "from src.utils.denoising import Dimensional_Denoise\n",
+    "\n",
+    "\n",
+    "df_ABBV = extract_index(\"ABBV\")\n",
+    "\n",
+    "dim_denoise = Dimensional_Denoise()\n",
+    "df_ABBV = dim_denoise.apply_all(df_ABBV, 'Close')\n",
+    "\n",
+    "df_ABBV.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6b5ab23",
+   "metadata": {},
+   "source": [
+    "##### <a id='toc2_2_4_6_1_'></a>[Additional: How to evaluate the smoothing technique](#toc0_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "6bcb1b51",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'MA_12': 0.12123659620575873,\n",
+       " 'Gaussian_2': 0.204729979775601,\n",
+       " 'Seasonal_Dec': 0.1166234698778934,\n",
+       " 'STL': 0.07587941502342997,\n",
+       " 'HP': 0.06320839316382956,\n",
+       " 'Savgol': 0.33302825340724346,\n",
+       " 'Fourier': 1.177819387730725,\n",
+       " 'Wavelet': 0.203837868751771,\n",
+       " 'EMD': 0.24848644073303358}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def eval_smoothness(df, orig_col=\"Close\"):\n",
+    "    metrics = {}\n",
+    "    for col in df.columns:\n",
+    "        if col != orig_col and not col in [\"Open\",\"High\",\"Low\",\"Volume\"]:\n",
+    "            metrics[col] = df[col].diff().var()\n",
+    "    return metrics\n",
+    "metrics = eval_smoothness(df_ABBV)\n",
+    "metrics"
    ]
   },
   {
