add prebuilt utils

--- a/notebooks/preprocessing_benchmark.ipynb
+++ b/notebooks/preprocessing_benchmark.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9faa0a91",
+   "id": "25011be6",
    "metadata": {},
    "source": [
     "**Table of contents**<a id='toc0_'></a>    \n",
@@ -63,7 +63,11 @@
     "        - [Pre-requisites: Cauchy Principle Value](#toc2_2_4_5_8_)    \n",
     "        - [Hilbert Spectrum Analysis (HSA)](#toc2_2_4_5_9_)    \n",
     "      - [Sample comprehensive implementation and comparison between methods](#toc2_2_4_6_)    \n",
-    "        - [Additional: How to evaluate the smoothing technique](#toc2_2_4_6_1_)    \n",
+    "      - [Additional: How to evaluate the smoothing technique](#toc2_2_4_7_)    \n",
+    "        - [Mean Squared Error (MSE)](#toc2_2_4_7_1_)    \n",
+    "        - [Mean Absolute Error (MAE)](#toc2_2_4_7_2_)    \n",
+    "        - [Smoothness Metrics (Variance of the First Difference)](#toc2_2_4_7_3_)    \n",
+    "        - [Signal-to-Noise Ratio (SNR)](#toc2_2_4_7_4_)    \n",
     "    - [Dealing with Nulls and Missing data](#toc2_2_5_)    \n",
     "      - [Forward/ Back fills](#toc2_2_5_1_)    \n",
     "      - [Winsorization](#toc2_2_5_2_)    \n",
@@ -82,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "5bfb59d2",
    "metadata": {},
    "outputs": [],
@@ -136,7 +140,10 @@
     "from PyEMD.EMD import EMD #EMD\n",
     "\n",
     "# Additional\n",
-    "from scipy.signal import hilbert"
+    "from scipy.signal import hilbert\n",
+    "\n",
+    "#Evaluation \n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error"
    ]
   },
   {
@@ -4425,7 +4432,228 @@
    "id": "c6b5ab23",
    "metadata": {},
    "source": [
-    "##### <a id='toc2_2_4_6_1_'></a>[Additional: How to evaluate the smoothing technique](#toc0_)"
+    "#### <a id='toc2_2_4_7_'></a>[Additional: How to evaluate the smoothing technique](#toc0_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e240b10",
+   "metadata": {},
+   "source": [
+    "To evaluate how well each denoising method smooths the data, we typically compare the smoothed series against the original Close Price by\n",
+    "\n",
+    "* Fidelity (how close is it to the original signal)\n",
+    "* Smoothness (noise reduction)\n",
+    "\n",
+    "Some metrics can be applied like:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b4840db",
+   "metadata": {},
+   "source": [
+    "##### <a id='toc2_2_4_7_1_'></a>[Mean Squared Error (MSE)](#toc0_)\n",
+    "\n",
+    "Measures how far the smoothed signal deviates from the original => The lower the better\n",
+    "\n",
+    "$$MSE = \\frac{1}{N}\\sum(y_t - \\hat{y}_t)^2$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "0c2c5f86",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'MA_12': 3.7243083284701193,\n",
+       " 'Gaussian_2': 0.6481229912464543,\n",
+       " 'Seasonal_Dec': 47.94694805532991,\n",
+       " 'STL': 3.0958397851406083,\n",
+       " 'HP': 2.393775317424449,\n",
+       " 'Savgol': 0.6363529717243332,\n",
+       " 'Fourier': 3.4938671373770953,\n",
+       " 'Wavelet': 1.128207861991596,\n",
+       " 'EMD': 0.919446314989725}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def eval_mse(df, orig_col=\"Close\"):\n",
+    "    metrics = {}\n",
+    "    df = df.fillna(0)\n",
+    "    for col in df.columns:\n",
+    "        if col != orig_col and not col in [\"Open\",\"High\",\"Low\",\"Volume\"]:\n",
+    "            metrics[col] = mean_squared_error(df[orig_col], df[col])\n",
+    "    return metrics\n",
+    "\n",
+    "metrics = eval_mse(df_ABBV)\n",
+    "metrics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b9aedbd",
+   "metadata": {},
+   "source": [
+    "##### <a id='toc2_2_4_7_2_'></a>[Mean Absolute Error (MAE)](#toc0_)\n",
+    "\n",
+    "is less sensitive to large deviations than MSE: \n",
+    "\n",
+    "$$MAE = \\frac{1}{N}\\sum|y_t - \\hat{y}_t|$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "6f0f7193",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'MA_12': 1.329447928612313,\n",
+       " 'Gaussian_2': 0.5330847954057846,\n",
+       " 'Seasonal_Dec': 1.1670750401957186,\n",
+       " 'STL': 1.0507062823042486,\n",
+       " 'HP': 1.065789970353577,\n",
+       " 'Savgol': 0.5267245393040966,\n",
+       " 'Fourier': 0.7183420960342859,\n",
+       " 'Wavelet': 0.7918834898395203,\n",
+       " 'EMD': 0.6424141986029234}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def eval_mae(df, orig_col=\"Close\"):\n",
+    "    metrics = {}\n",
+    "    df = df.fillna(0)\n",
+    "    for col in df.columns:\n",
+    "        if col != orig_col and not col in [\"Open\",\"High\",\"Low\",\"Volume\"]:\n",
+    "            metrics[col] = mean_absolute_error(df[orig_col], df[col])\n",
+    "    return metrics\n",
+    "\n",
+    "metrics = eval_mae(df_ABBV)\n",
+    "metrics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05d363b7",
+   "metadata": {},
+   "source": [
+    "##### <a id='toc2_2_4_7_3_'></a>[Smoothness Metrics (Variance of the First Difference)](#toc0_)\n",
+    "\n",
+    "A smoother signal has smaller variance of consecutive differences\n",
+    "\n",
+    "$$Smoothness = Var(Δ\\hat{y}_t), Δ \\hat{y}_t = \\hat{y}_t - \\hat{y}_{t-1}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "b468981d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'MA_12': 0.12123659620575873,\n",
+       " 'Gaussian_2': 0.204729979775601,\n",
+       " 'Seasonal_Dec': 0.1166234698778934,\n",
+       " 'STL': 0.07587941502342997,\n",
+       " 'HP': 0.06320839316382956,\n",
+       " 'Savgol': 0.33302825340724346,\n",
+       " 'Fourier': 1.177819387730725,\n",
+       " 'Wavelet': 0.203837868751771,\n",
+       " 'EMD': 0.24848644073303358}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def eval_smoothness(df, orig_col=\"Close\"):\n",
+    "    metrics = {}\n",
+    "    for col in df.columns:\n",
+    "        if col != orig_col and not col in [\"Open\",\"High\",\"Low\",\"Volume\"]:\n",
+    "            metrics[col] = df[col].diff().var()\n",
+    "    return metrics\n",
+    "\n",
+    "metrics = eval_smoothness(df_ABBV)\n",
+    "metrics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0374ba7",
+   "metadata": {},
+   "source": [
+    "##### <a id='toc2_2_4_7_4_'></a>[Signal-to-Noise Ratio (SNR)](#toc0_)\n",
+    "\n",
+    "How much variance is explained by the smooth version:\n",
+    "\n",
+    "$$SNR = 10.log_{10}(\\frac{Var(\\hat{y}_t)}{Var(y_t - \\hat{y}_t)})$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "fb7ccd0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'MA_12': 25.538257599378827,\n",
+       " 'Gaussian_2': 33.09202264466046,\n",
+       " 'Seasonal_Dec': 29.56261900958696,\n",
+       " 'STL': 26.31052165716838,\n",
+       " 'HP': 27.409799013407664,\n",
+       " 'Savgol': 33.17971120676465,\n",
+       " 'Fourier': 25.769400326210206,\n",
+       " 'Wavelet': 30.684289757434705,\n",
+       " 'EMD': 31.570289629199646}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def eval_snr(df, orig_col=\"Close\"):\n",
+    "    metrics = {}\n",
+    "    orig = df[orig_col]\n",
+    "    for col in df.columns:\n",
+    "        if col != orig_col and not col in [\"Open\",\"High\",\"Low\",\"Volume\"]:\n",
+    "            noise = orig - df[col]\n",
+    "            metrics[col] = 10 * np.log10(np.var(df[col]) / np.var(noise))\n",
+    "    return metrics\n",
+    "\n",
+    "metrics = eval_snr(df_ABBV)\n",
+    "metrics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "381f0ee9",
+   "metadata": {},
+   "source": [
+    "We can see that along the Smoothening techniques: Savgol filter and Gaussian kernel are the most efficient technique which both reduces error but increasing smoothening quality"
    ]
   },
   {
