--- a/notebooks/preprocessing_benchmark.ipynb
+++ b/notebooks/preprocessing_benchmark.ipynb
@@ -2,7 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "25011be6",
+   "id": "58103355",
+   "metadata": {},
+   "source": [
+    "# Time Series Preprocessing Benchmark"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b6eceaa",
    "metadata": {},
    "source": [
     "**Table of contents**<a id='toc0_'></a>    \n",
@@ -69,10 +77,22 @@
     "        - [Smoothness Metrics (Variance of the First Difference)](#toc2_2_4_7_3_)    \n",
     "        - [Signal-to-Noise Ratio (SNR)](#toc2_2_4_7_4_)    \n",
     "    - [Dealing with Nulls and Missing data](#toc2_2_5_)    \n",
-    "      - [Forward/ Back fills](#toc2_2_5_1_)    \n",
-    "      - [Winsorization](#toc2_2_5_2_)    \n",
-    "      - [Hampel filter](#toc2_2_5_3_)    \n",
-    "      - [Robust z-score](#toc2_2_5_4_)    \n",
+    "      - [Forward/ Back fills => LOCF/ NOCB](#toc2_2_5_1_)    \n",
+    "      - [Interpolation](#toc2_2_5_2_)    \n",
+    "    - [Outlier Detection](#toc2_2_6_)    \n",
+    "      - [Hampel filter](#toc2_2_6_1_)    \n",
+    "      - [Winsorization](#toc2_2_6_2_)    \n",
+    "      - [Z-score/ Modified Z-Score](#toc2_2_6_3_)    \n",
+    "      - [Grubbs' test](#toc2_2_6_4_)    \n",
+    "      - [Dixon's Q test](#toc2_2_6_5_)    \n",
+    "      - [Boxplot/ Tukey's fences](#toc2_2_6_6_)    \n",
+    "      - [Cumulative Sum Control Chart (CUSUM)](#toc2_2_6_7_)    \n",
+    "      - [Singular Spectrum Analysis (SSA) outlier detection](#toc2_2_6_8_)    \n",
+    "      - [Change Point Detection](#toc2_2_6_9_)    \n",
+    "        - [Bayesian Change Point Detection](#toc2_2_6_9_1_)    \n",
+    "        - [Pruned Exact Linear Time (PELT)](#toc2_2_6_9_2_)    \n",
+    "        - [Kernel Change Point algorithm](#toc2_2_6_9_3_)    \n",
+    "        - [Dynamic Programming CPD](#toc2_2_6_9_4_)    \n",
     "\n",
     "<!-- vscode-jupyter-toc-config\n",
     "\tnumbering=false\n",
@@ -4415,8 +4435,8 @@
     }
    ],
    "source": [
-    "from src.utils.extract_stock_index import extract_index\n",
-    "from src.utils.denoising import Dimensional_Denoise\n",
+    "from src.utils.processing.extract_stock_index import extract_index\n",
+    "from src.utils.processing.denoising import Dimensional_Denoise\n",
     "\n",
     "\n",
     "df_ABBV = extract_index(\"ABBV\")\n",
@@ -4705,15 +4725,241 @@
    "id": "6ac3c675",
    "metadata": {},
    "source": [
-    "#### <a id='toc2_2_5_1_'></a>[Forward/ Back fills](#toc0_)"
+    "#### <a id='toc2_2_5_1_'></a>[Forward/ Back fills => LOCF/ NOCB](#toc0_)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "38e97ee0",
+   "id": "b50b5ea8",
    "metadata": {},
    "source": [
-    "#### <a id='toc2_2_5_2_'></a>[Winsorization](#toc0_)"
+    "Forwardfills and backfills are the very first existed and simpliest algorithms in Time Series Analysis. The algorithm imputes Null data simply by taking the last/ next value to fit in the missing value. \n",
+    "\n",
+    "* The Forward fills look at the previous past data and\n",
+    "* The Back fills looks at the next future data\n",
+    "\n",
+    "This is useful when there is relevant information lying in the past/ future data which can be used to explain missing data and also for the simplicity/ low computational cost of the algorithm. \n",
+    "\n",
+    "However, this is too out-of-date and bias introducing when hallucinating data just based on neighboring data points instead of the whole data movement and frequency"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6643c9d6",
+   "metadata": {},
+   "source": [
+    "A new improved version of these 2 methods have also been introduced with a more strict rule of imputing, they are the Last Observation Carried Forward (LOCF) and Next Observation Carried Backward (NOCB)\n",
+    "\n",
+    "* LOCF is a smarter forward fill where each missing is replaced with the last valid observation before it, but typically bounded so it doesn't fill beyond the last know data point -> avoiding leakage past the data end\n",
+    "\n",
+    "* Similarly, NOCB enhances from backward fill to fill data upto a certain boundary to prevent data leakage, this boundary is usually the last value in the series \n",
+    "\n",
+    "LOCF and NOCB are more widely used in fields like finance, medicine and economics, while LOCF is actually used more due to the assumption of continuity, withouth any other changes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9224ad01",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>LOCF</th>\n",
+       "      <th>NOCB</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-01-01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2023-01-02</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2023-01-03</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2023-01-04</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2023-01-05</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2023-01-06</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2023-01-07</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2023-01-08</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2023-01-09</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2023-01-10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Date  Close  LOCF  NOCB\n",
+       "0 2023-01-01    NaN   NaN   1.0\n",
+       "1 2023-01-02    1.0   1.0   1.0\n",
+       "2 2023-01-03    NaN   1.0   4.0\n",
+       "3 2023-01-04    4.0   4.0   4.0\n",
+       "4 2023-01-05    5.0   5.0   5.0\n",
+       "5 2023-01-06    NaN   5.0   7.0\n",
+       "6 2023-01-07    7.0   7.0   7.0\n",
+       "7 2023-01-08    NaN   7.0  10.0\n",
+       "8 2023-01-09   10.0  10.0  10.0\n",
+       "9 2023-01-10    NaN  10.0   NaN"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dates = pd.date_range(\"2023-01-01\", periods=10, freq=\"D\")\n",
+    "values = [np.nan, 1, np.nan, 4, 5, np.nan, 7, np.nan, 10, np.nan]\n",
+    "ts = pd.DataFrame({\"Date\": dates, \"Close\": values})\n",
+    "\n",
+    "ts['LOCF'] = ts['Close'].ffill()\n",
+    "ts['NOCB'] = ts['Close'].bfill()\n",
+    "ts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6aa08dc4",
+   "metadata": {},
+   "source": [
+    "Notice the boundary of each method is not imputed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f140c5fc",
+   "metadata": {},
+   "source": [
+    "#### <a id='toc2_2_5_2_'></a>[Interpolation](#toc0_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a5ab4cd",
+   "metadata": {},
+   "source": [
+    "We have talked about one variant of Interpolation above naming Cubic Spline Interpolation, mainly used by the Envelope construction during Empirical Mode Decomposition. In general, Interpolation is the process of estimating mising values between known data points by trying to follow the underlying trend/ curve $f(x_i)$ in the data\n",
+    "\n",
+    "Some main types of Interpolation include\n",
+    "\n",
+    "1. Linear Interpolation:\n",
+    "\n",
+    "connects 2 known points with a straight line, assuming linear change\n",
+    "\n",
+    "$$y = y_0 + \\frac{y_1 - y_0}{x_1 - x_0}(x-x_0)$$\n",
+    "\n",
+    "2. Polynomial Interpolation: \n",
+    "\n",
+    "uses a single polynomial passing through all points, instead of just 1 line like above. This can capture nonlinear oscillating trend, but high-order polynomials can often oscillate uncontrollably (Runge's phenomenon)\n",
+    "\n",
+    "3. Spline Interpolation:\n",
+    "\n",
+    "breaks the series into smaller intervals and fits low-degree polynomials (often cubic) between pairs. This ensures the smoothness at the boundaries (which helps avoiding the Runge's phenomenon) and is very popular for curve smoothing.\n",
+    "\n",
+    "4. Nearest Neighbor\n",
+    "\n",
+    "is a special type of Interpolation which utilizes the algorithms of KNN to impute data based on nearest known point's value, this is a neighboring relative approach and may not work well with sequential data\n",
+    "\n",
+    "5. Piecewise Methods\n",
+    "\n",
+    "contains Step-wise constant (like LOCF and NOCB) and Piecewise Linear (which draws a line to connect each consecutive points together)\n",
+    "\n",
+    "6. Some other advanced methods\n",
+    "\n",
+    "like Fourier Interpolation (assuming periodicity), Kriging (geostatistics, considers spatial correlation) or Barycentric/ Lagrange interpolation (numerically stable forms of polynomial interpolation)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e642a30",
+   "metadata": {},
+   "source": [
+    "* Note that while Interpolation uses the existing data points to fill the missing data within the range, Extrapolation uses the existing data points to predict the value out of the range, this is also called Forecasting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8bcff2b5",
+   "metadata": {},
+   "source": [
+    "### <a id='toc2_2_6_'></a>[Outlier Detection](#toc0_)"
    ]
   },
   {
@@ -4721,16 +4967,111 @@
    "id": "0ff90180",
    "metadata": {},
    "source": [
-    "#### <a id='toc2_2_5_3_'></a>[Hampel filter](#toc0_)"
+    "#### <a id='toc2_2_6_1_'></a>[Hampel filter](#toc0_)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bc510a8d",
+   "id": "6e988dcd",
    "metadata": {},
    "source": [
-    "#### <a id='toc2_2_5_4_'></a>[Robust z-score](#toc0_)"
+    "#### <a id='toc2_2_6_2_'></a>[Winsorization](#toc0_)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7478aa26",
+   "metadata": {},
+   "source": [
+    "#### <a id='toc2_2_6_3_'></a>[Z-score/ Modified Z-Score](#toc0_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "241051f8",
+   "metadata": {},
+   "source": [
+    "#### <a id='toc2_2_6_4_'></a>[Grubbs' test](#toc0_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01909ed7",
+   "metadata": {},
+   "source": [
+    "#### <a id='toc2_2_6_5_'></a>[Dixon's Q test](#toc0_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b91c857",
+   "metadata": {},
+   "source": [
+    "#### <a id='toc2_2_6_6_'></a>[Boxplot/ Tukey's fences](#toc0_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "660eb507",
+   "metadata": {},
+   "source": [
+    "#### <a id='toc2_2_6_7_'></a>[Cumulative Sum Control Chart (CUSUM)](#toc0_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "778e228b",
+   "metadata": {},
+   "source": [
+    "#### <a id='toc2_2_6_8_'></a>[Singular Spectrum Analysis (SSA) outlier detection](#toc0_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab63e319",
+   "metadata": {},
+   "source": [
+    "#### <a id='toc2_2_6_9_'></a>[Change Point Detection](#toc0_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b87175a",
+   "metadata": {},
+   "source": [
+    "##### <a id='toc2_2_6_9_1_'></a>[Bayesian Change Point Detection](#toc0_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dafc6ba5",
+   "metadata": {},
+   "source": [
+    "##### <a id='toc2_2_6_9_2_'></a>[Pruned Exact Linear Time (PELT)](#toc0_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fda41746",
+   "metadata": {},
+   "source": [
+    "##### <a id='toc2_2_6_9_3_'></a>[Kernel Change Point algorithm](#toc0_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2779a91",
+   "metadata": {},
+   "source": [
+    "##### <a id='toc2_2_6_9_4_'></a>[Dynamic Programming CPD](#toc0_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f21f1bc1",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
