--- a/notebooks/track1_forecasting_benchmark.ipynb
+++ b/notebooks/track1_forecasting_benchmark.ipynb
@@ -19,7 +19,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84dff4d8",
+   "id": "671040c3",
+   "metadata": {},
+   "source": [
+    "### Holt-Winter Triple Exponential smoothing forecasting\n",
+    "\n",
+    "https://www.solarwinds.com/blog/holt-winters-forecasting-simplified"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d4a78bc",
+   "metadata": {},
+   "source": [
+    "#### Pre-requisites: Exponential Smoothing (EMA)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77eaead0",
    "metadata": {},
    "source": []
   }
