add ceedam and vmd

--- a/notebooks/track1_forecasting_benchmark.ipynb
+++ b/notebooks/track1_forecasting_benchmark.ipynb
@@ -39,6 +39,14 @@
    "cell_type": "markdown",
    "id": "77eaead0",
    "metadata": {},
+   "source": [
+    "When forecasting, add an error bands to show confidence level for future forecast"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34b123af",
+   "metadata": {},
    "source": []
   }
  ],
