--- a/notebooks/track1_forecasting_benchmark.ipynb
+++ b/notebooks/track1_forecasting_benchmark.ipynb
@@ -45,7 +45,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34b123af",
+   "id": "0335cca9",
+   "metadata": {},
+   "source": [
+    "### Gray Forecasting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86f372e2",
+   "metadata": {},
+   "source": [
+    "### Fuzzy Logic"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8d7b8d5",
    "metadata": {},
    "source": []
   }
