--- a/notebooks/track3_regression_benchmark.ipynb
+++ b/notebooks/track3_regression_benchmark.ipynb
@@ -18,6 +18,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bc818ef9",
+   "metadata": {},
+   "source": [
+    "#### Pre-requisites: The Convolution integration Recurrent Network"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95479e79",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "8d54f6d9",
    "metadata": {},
    "source": [
